--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Tu m'appelles depuis {{request.remote_addr}}</h1><br>
-    <p>Bienvenue, Calixte.<br></p>
+    <p>Bienvenue chez moi.<br></p>
 </body>
 </html>
