--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
-    <h1>Tu m'appelles depuis {{request.remote_addr}}</h1><br>
-    <p>Bienvenue chez moi.<br></p>
+    <h1>En construction...</h1><br>
+    <p>&Ccedil;a arrive (peut-&ecirc;tre...)<br></p>
 </body>
 </html>
